[Enhancement #216] Implement multilingual string referenced list loading in RDF4J driver.